--- a/index.html
+++ b/index.html
@@ -6,36 +6,35 @@
   </head>
   <body>
     <h1>Registration Form</h1>
-    <p>Please fill out this form with the required information</p>
-    <form action='https://register-demo.freecodecamp.org'>
+    <p>Please fill out with the required information</p>
+    <form action='https://register.kuehns.ca'>
       <fieldset>
-        <label>Enter Your First Name: <input type="text" name="first-name" required /></label>
-        <label>Enter Your Last Name: <input type="text" name="last-name" required /></label>
-        <label>Enter Your Email: <input type="email" name="email" required /></label>
+        <label>First Name: <input type="text" name="first-name" required /></label>
+        <label>Last Name: <input type="text" name="last-name" required /></label>
+        <label>Email: <input type="email" name="email" required /></label>
         <label>Create a New Password: <input type="password" name="password" pattern="[a-z0-5]{8,}" required /></label>
       </fieldset>
       <fieldset>
         <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
         <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
         <label>
-          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="terms.html">terms and conditions</a>
 			  </label>
       </fieldset>
       <fieldset>
         <label>Upload a profile picture: <input type="file" name="file" /></label>
-        <label>Input your age (years): <input type="number" name="age" min="13" max="120" />
+        <label>Age: <input type="number" name="age" min="13" max="99" />
 			  </label>
         <label>How did you hear about us?
           <select name="referrer">
             <option value="">(select one)</option>
-            <option value="1">freeCodeCamp News</option>
-            <option value="2">freeCodeCamp YouTube Channel</option>
-            <option value="3">freeCodeCamp Forum</option>
-            <option value="4">Other</option>
+            <option value="1">kuehns YouTube Channel</option>
+            <option value="2">kuehns Forum</option>
+            <option value="3">Other</option>
           </select>
         </label>
-        <label>Provide a bio:
-          <textarea name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
+        <label>Bio:
+          <textarea name="bio" rows="3" cols="30" placeholder="I like coding and stuff..."></textarea>
 			  </label>
       </fieldset>
       <input type="submit" value="Submit" />
