Switch from California law to Canadian law

--- a/terms.html
+++ b/terms.html
@@ -72,7 +72,7 @@
     <p>As far as the law allows, the company’s total liability to you for claims of any kind that are related to the website or content on the website will be limited to $50.</p>
 
     <h2>Feedback</h2>
-    <p>The company welcomes your feedback and suggestions for the website. See the Contact section below for ways to get in touch with us.</p>
+    <p>The company welcomes your feedback and suggestions for the website. Contact alan@kuehns.ca.</p>
     <p>You agree that the company will be free to act on feedback and suggestions you provide, and that the company won’t have to notify you that your feedback was used, get your permission to use it, or pay you. You agree not to submit feedback or suggestions that you believe might be confidential or proprietary, to you or others.</p>
 
     <h2>Termination</h2>
@@ -80,9 +80,9 @@
     <p>The following provisions survive the end of our agreement: Your Content, Feedback, Your Responsibility, Disclaimers, Limits on Liability, and General Terms.</p>
 
     <h2>Disputes</h2>
-    <p>California law will govern any dispute, including any legal proceedings, related to these terms or your use of the website.</p>
-    <p>You and the company agree to seek injunctions related to these terms only in state or federal court in San Francisco, California. Neither you nor the company will object to jurisdiction, forum, or venue in those courts.</p>
-    <p>Other than to seek an injunction or for claims under the Computer Fraud and Abuse Act, you and the company will resolve any Dispute by binding American Arbitration Association arbitration. Arbitration will follow the AAA’s Commercial Arbitration Rules and Supplementary Procedures for Consumer Related Disputes. Arbitration will happen in San Francisco, California. You will settle any dispute as an individual, and not as part of a class action or other representative proceeding, whether as the plaintiff or a class member. No arbitrator will consolidate any dispute with any other arbitration without the company’s permission.</p>
+    <p>Canadian law will govern any dispute, including any legal proceedings, related to these terms or your use of the website.</p>
+    <p>You and the company agree to seek injunctions related to these terms only in provincial or federal court on Vancouver Island in British Columbia. Neither you nor the company will object to jurisdiction, forum, or venue in those courts.</p>
+    <p>Other than to seek an injunction or for claims under the Computer Fraud and Abuse Act, you and the company will resolve any Dispute by binding Canadian Arbitration Association arbitration. Arbitration will follow the CAA’s Commercial Arbitration Rules and Supplementary Procedures for Consumer Related Disputes. Arbitration will happen on Vancouver Island in British Columbia. You will settle any dispute as an individual, and not as part of a class action or other representative proceeding, whether as the plaintiff or a class member. No arbitrator will consolidate any dispute with any other arbitration without the company’s permission.</p>
     <p>Any arbitration award will include costs of the arbitration, reasonable attorneys’ fees, and reasonable costs for witnesses. You or the company may enter arbitration awards in any court with jurisdiction.</p>
 
     <h2>General Terms</h2>
