--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Registration Form</h1>
     <p>Please fill out with the required information</p>
-    <form action='https://register.kuehns.ca'>
+    <form action="https://formsubmit.co/alan@kuehns.ca" method="POST">
       <fieldset>
         <label>First Name: <input type="text" name="first-name" required /></label>
         <label>Last Name: <input type="text" name="last-name" required /></label>
@@ -18,7 +18,7 @@
         <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
         <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
         <label>
-          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="terms.html">terms and conditions</a>
+          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="terms.html" target="_blank">terms and conditions</a>
 			  </label>
       </fieldset>
       <fieldset>
