--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Registration Form</h1>
     <p>Please fill out with the required information</p>
-    <form action="https://formsubmit.co/alan@kuehns.ca" method="POST">
+    <form action="https://formsubmit.co/5836c911196a201b354ebd0386a9b00b" method="POST">
       <fieldset>
         <label>First Name: <input type="text" name="first-name" required /></label>
         <label>Last Name: <input type="text" name="last-name" required /></label>
