--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
 	  <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out with the required information</p>
-    <form action="https://formsubmit.co/5836c911196a201b354ebd0386a9b00b" method="POST">
+    <h1 id="title">Registration Form</h1>
+    <p id="description">Please fill out with the required information</p>
+    <form id="survey-form" action="https://formsubmit.co/5836c911196a201b354ebd0386a9b00b" method="POST">
       <fieldset>
-        <label>First Name: <input type="text" name="first-name" required /></label>
-        <label>Last Name: <input type="text" name="last-name" required /></label>
-        <label>Email: <input type="email" name="email" required /></label>
+        <label id="name-label">Name: <input id="name" type="text" placeholder="Name" required /></label>
+        <label id="email-label">Email: <input id="email" type="email" placeholder="email@email.email" required /></label>
         <label>Create a New Password: <input type="password" name="password" pattern="[a-z0-5]{8,}" required /></label>
       </fieldset>
       <fieldset>
-        <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
-        <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
+        <label><input type="radio" name="account-type" value="personal" class="inline" /> Personal Account</label>
+        <label><input type="radio" name="account-type" value="business" class="inline" /> Business Account</label>
         <label>
-          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="terms.html" target="_blank">terms and conditions</a>
-			  </label>
+          <input type="checkbox" name="terms" value="accept" class="inline" required /> I accept the <a href="terms.html">terms and conditions</a>
+          <input type="checkbox" name="terms" value="denied" class="inline" /> I do not accept the terms and conditions</label>
       </fieldset>
       <fieldset>
         <label>Upload a profile picture: <input type="file" name="file" /></label>
-        <label>Age: <input type="number" name="age" min="13" max="99" />
+        <label id="number-label">Age: <input id="number" type="number" placeholder="age" min="13" max="99" />
 			  </label>
         <label>How did you hear about us?
-          <select name="referrer">
+          <select id="dropdown">
             <option value="">(select one)</option>
             <option value="1">kuehns YouTube Channel</option>
             <option value="2">kuehns Forum</option>
@@ -37,7 +36,7 @@
           <textarea name="bio" rows="3" cols="30" placeholder="I like coding and stuff..."></textarea>
 			  </label>
       </fieldset>
-      <input type="submit" value="Submit" />
+      <input id="submit" type="submit" value="Submit" />
     </form>
   </body>
 </html>
