Change checkbox from not accept to excite

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label><input type="radio" name="account-type" value="personal" class="inline" /> Personal Account</label>
         <label><input type="radio" name="account-type" value="business" class="inline" /> Business Account</label>
         <label><input type="checkbox" name="terms" value="accept" class="inline" required /> I accept the <a href="terms.html">terms and conditions</a></label>
-        <label><input type="checkbox" name="terms" value="denied" class="inline" /> I do not accept the terms and conditions</label>
+        <label><input type="checkbox" name="terms" value="excite" class="inline" /> Terms and conditions excite me</label>
       </fieldset>
       <fieldset>
         <label>Upload a profile picture: <input type="file" name="file" /></label>
