Open terms in new tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <fieldset>
         <label><input type="radio" name="account-type" value="personal" class="inline" /> Personal Account</label>
         <label><input type="radio" name="account-type" value="business" class="inline" /> Business Account</label>
-        <label><input type="checkbox" name="terms" value="accept" class="inline" required /> I accept the <a href="terms.html">terms and conditions</a></label>
+        <label><input type="checkbox" name="terms" value="accept" class="inline" required /> I accept the <a href="terms.html" target="_blank">terms and conditions</a></label>
         <label><input type="checkbox" name="terms" value="excite" class="inline" /> Terms and conditions excite me</label>
       </fieldset>
       <fieldset>
