Change profile pic name from file to url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label><input type="checkbox" name="excite" value="yes" class="inline" /> Terms and conditions excite me</label>
       </fieldset>
       <fieldset>
-        <label>Enter a link to your profile picture: <input type="file" name="file" /></label>
+        <label>Enter a link to your profile picture: <input type="file" name="pic url" /></label>
         <label id="number-label">Age: <input id="number" name="age" type="number" placeholder="age" min="13" max="99" />
 			  </label>
         <label>How did you hear about us?
